--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 
-ctx.font = "20px Agency FB";
+ctx.font = "20px New Rocker";
 ctx.fillText("TTTT",300,200);
 var img = new Image();
 var img2 = new Image();
